# pykiwoom-rest

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  API_COMPLETE_REFERENCE.md  API_DETAILED_GUIDE.md  API_DOCUMENTATION.md  API_SPECIFICATIONS_AUTO.md  API_SPECS_FROM_PYKIWOOM.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_FOR_COLLABORATORS.md  DEVELOPMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXCEL_PARSING_RESULTS.md  FIXES_20251029.md  IMPLEMENTATION_ROADMAP.md  KIWOOM_API_SPECIFICATION.md  Kiwoom_Environment.postman_environment.json  Kiwoom_REST_API_Collection.postman_collection.json  MANIFEST.in  MCP_SERVER_COMPLETE.md  MCP_SERVER_SUMMARY.md  MCP_TROUBLESHOOTING.md  POSTMAN_SETUP_GUIDE.md  PRD_UNIMPLEMENTED_APIS.md  PROJECT_STATUS_v2.1.md  README.md  README_FACADE.md  SWAGGER_UI_GUIDE.md  api_specifications.json  example.py  example_new_architecture.py  fix_notebook_failfast.py  fix_notebook_token_issue.py  main.py  openapi.yaml  (+13 more)
.github/workflows/: ci-cd.yml  ci.yml  claude-code-review.yml
.taskmaster/: CLAUDE.md  config.json  state.json
.taskmaster/docs/: prd.md  prd.txt  refactoring-prd.md
.taskmaster/tasks/: tasks.json
.taskmaster/templates/: example_prd.txt  example_prd_rpg.txt
api/: 01_authentication.md  02_stock_info.md  03_market_data.md  04_chart.md  05_ranking.md  06_account_order.md  07_realtime.md  08_etf_elw.md  09_sector_theme.md  10_special.md  README.md
docs/: API.md  BS_ERADICATION_REPORT.md  KIWOOM_API_REFERENCE.md  SECTOR_CHART_API.md  api_response_key_mapping.md  kiwoom_api_toc.json  kiwoom_rest_api_full.md
docs/api_details/: au10001_접근토큰 발급.md  au10002_접근토큰폐기.md  ka00198_실시간종목조회순위.md  ka01690_일별잔고수익률.md  ka10001_주식기본정보요청.md  ka10002_주식거래원요청.md  ka10003_체결정보요청.md  ka10004_주식호가요청.md  ka10005_주식일주월시분요청.md  ka10006_주식시분요청.md  ka10007_시세표성정보요청.md  ka10008_주식외국인종목별매매동향.md  ka10009_주식기관요청.md  ka10010_업종프로그램요청.md  ka10011_신주인수권전체시세요청.md  ka10013_신용매매동향요청.md  ka10014_공매도추이요청.md  ka10015_일별거래상세요청.md  ka10016_신고저가요청.md  ka10017_상하한가요청.md  ka10058_투자자별일별매매종목요청.md  ka10063_장중투자자별매매요청.md  ka10080_주식분봉차트조회요청.md  ka10081_주식일봉차트조회요청.md  kt00001_예수금상세현황요청.md  kt00018_계좌평가잔고내역요청.md
examples/: README.md  direct_credential_injection.py  pykiwoom.ipynb  pykiwoom_comprehensive_test.ipynb  test_new_apis_script.py  test_websocket_connection.py
examples/performance/: perf_concurrent_performance.py  perf_rate_limit_live.py  test_async_parallel.py  test_concurrent_performance.py  test_rate_limit_live.py  test_rate_limit_simple.py
pykiwoom-mcp-server/: .env.example  .gitignore  LICENSE  MCP_INSTALLATION_COMPLETE.md  README.md  STRUCTURE.md  TEST_RESULTS.md  claude_desktop_config.example.json  pyproject.toml  test_mcp_connection.py  test_mcp_live.py  test_mcp_simple.py  test_quick.py  test_server.py  test_standalone.py
pykiwoom-mcp-server/src/pykiwoom_mcp_server/: __init__.py  server.py
pykiwoom-mcp-server/tests/: __init__.py  test_mcp_protocol.py  test_server.py
reports/: REFACTORING_REPORT.md
scripts/: format.sh  lint.sh  test.sh
src/pykiwoom_rest/: __init__.py  account_api.py  api_facade.py  async_api.py  auth_api.py  base_api.py  chart_api.py  concurrent_api.py  exception_utils.py  investor_api.py  kiwoom.xlsx  kiwoom_base.py  kiwoom_rest.py  kiwoom_rest_base.py  kiwoom_rest_legacy.py  mcp_cli.py  mcp_server.py  order_api.py  program_api.py  ranking_api.py  rate_limit_optimizer.py  response_model.py  response_utils.py  sector_api.py  simple_api_facade.py  stock_api.py  unified_kiwoom_base.py  unified_kiwoom_rest.py  websocket_api.py  websocket_client.py
src/pykiwoom_rest/cli/: __init__.py  field_map.py  formatters.py  main.py  schema.py
tests/: conftest.py  manual_test_credentials.py  test_account_api_coverage.py  test_all_endpoints.py  test_api_connection.py  test_api_coverage_extension.py  test_api_facade.py  test_api_response_compatibility.py  test_async_api.py  test_async_api_coverage.py  test_async_modules_simple.py  test_auth_api.py  test_auth_api_error_paths.py  test_base_api_coverage.py  test_base_api_error_paths.py  test_basic_functionality.py  test_chart_api_coverage.py  test_chart_api_remaining_paths.py  test_cli_audit_fixes.py  test_cli_command_coverage.py  test_cli_field_map_coverage.py  test_cli_formatters_coverage.py  test_cli_main.py  test_cli_schema.py  test_concurrent_api.py  test_concurrent_api_coverage.py  test_coverage_extension.py  test_data_normalization.py  test_data_normalizer.py  test_debug_endpoints.py  test_direct_api.py  test_direct_credential_injection.py  test_endpoints_secure.py  test_integration_mocked.py  test_investor_api_coverage.py  test_investor_api_response_envelope.py  test_kiwoom.py  test_kiwoom_base_request_coverage.py  test_kiwoom_chart_api.py  test_kiwoom_official_example.py  (+29 more)
trash/: API_duplicate.md  AUDIT_REPORT.md  BS_AUDIT_REPORT.md  PARAMETER_FIX_REPORT.md  test_all_endpoints.py
trash/cleanup_20250904_010440/: test_direct_api.py  test_foreign_program.py  test_simple_api.py
