[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykiwoom-rest"
version = "2.2.0"
description = "키움증권 REST API Python 래퍼와 CLI, MCP 서버"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "PyKiwoom-REST Development Team", email = "dev@pykiwoom-rest.io"}
]
keywords = ["kiwoom", "trading", "stock", "api", "korea", "securities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.27,<2; python_version >= '3.10'",
]

[project.scripts]
kiwoom = "pykiwoom_rest.cli.main:main"
kiwoom-mcp = "pykiwoom_rest.mcp_cli:main"

[project.urls]
Homepage = "https://github.com/unohee/pykiwoom-rest"
Documentation = "https://github.com/unohee/pykiwoom-rest/blob/master/README.md"
Repository = "https://github.com/unohee/pykiwoom-rest.git"
Issues = "https://github.com/unohee/pykiwoom-rest/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  __pycache__
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["pykiwoom_rest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", ".venv-mcp"]
skips = ["B101"]

[tool.coverage.run]
source = ["src/pykiwoom_rest"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
