[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykiwoom-mcp-server"
version = "0.2.0"
description = "PyKiwoom-REST용 MCP stdio 서버"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "PyKiwoom-REST Development Team", email = "dev@pykiwoom-rest.io"}
]
keywords = ["mcp", "kiwoom", "stock", "trading", "api", "korea"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.27,<2",
    "pykiwoom-rest>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
pykiwoom-mcp-server = "pykiwoom_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: 실제 서비스와 인증 정보가 필요한 테스트",
]
